--- a/src/gestiohospitals/presentacio/BaseView.form
+++ b/src/gestiohospitals/presentacio/BaseView.form
@@ -77,7 +77,7 @@
     <Container class="javax.swing.JPanel" name="jPanelMessageArea">
       <Properties>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Cursor Por defecto"/>
+          <Color id="Default Cursor"/>
         </Property>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[428, 300]"/>
